--- a/portal/templates/client_edit.html
+++ b/portal/templates/client_edit.html
@@ -1,64 +1,78 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+{% from "flask_user/_macros.html" import render_field, client_back %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-                <div class="well lead-well">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <h4>Central Services OAuth 2.0 Credentials </h4>
-                            <ul>
-                                <li style="margin-bottom: 0.25em; font-size: 15px">App ID {{ client.client_id }} </li>
-                                <li style="margin-bottom: 0.25em; font-size: 15px">App Secret {{ client.client_secret }} </li>
-                                {% if service_token %}
-                                    <li style="margin-bottom: 0.25em;
-                                        font-size: 15px">Service Token {{
-                                        service_token.access_token }} </li>
-                                {% endif %}
-                            </ul>
-                            <form action="/client/{{ client.client_id }}" method="post">
-                                <div class="form-group">
-                                    {{ form.hidden_tag() }}
+            <div class="well lead-well">
 
-                                    {{ form.application_origins.label }}
-                                    {% if form.application_origins.errors %}
-                                    <ul class="errors">{% for error in form.application_origins.errors %}<li>{{ error }}</li>{% endfor %}</ul>
-                                    {% endif %}
-                                    {{ form.application_origins(size=200, class="form-control") }}
+                {{ client_back() }}
 
-                                    {{ form.callback_url.label }}
-                                    {% if form.callback_url.errors %}
-                                    <ul class="errors">{% for error in form.callback_url.errors %}<li>{{ error }}</li>{% endfor %}</ul>
-                                    {% endif %}
-                                    {{ form.callback_url(size=200, class="form-control") }}
-                                </div>
-                                <button type="submit" name="submit" class="btn btn-tnth-primary">Update App Settings</button>
-                                <button type="submit" name="delete" value="delete" class="btn btn-tnth-primary">Delete Application</button>
-                                <button type="submit" name="service_token" value="service_token" class="btn btn-tnth-primary">Create/Update Service Token</button>
-                            </form>
-                            {% macro render_field(field) %}
-                              <dt>{{ field.label }}
-                                <dd>{{ field(**kwargs)|safe }}
-                                  {% if field.errors %}
-                                      <ul class=errors>
-                                              {% for error in field.errors %}
-                                                    <li>{{ error }}</li>
-                                                        {% endfor %}
-                                                            </ul>
-                                                              {% endif %}
-                                                                </dd>
-                                                                {% endmacro %}
-                            <ul>
-                                <li style="margin-bottom: 0.25em; font-size: 15px">The <b>Application URL</b> may contain one or more origins separated by a single space.  Required to include the origin of the client's OAuth authorization redirect_uri and CORS origin values for any in-browser API requests.</li> 
-                                <li style="margin-bottom: 0.25em; font-size: 15px">Provide a <b>Callback URL</b> to receive POST requests for signifcant events, such as a user logout from sessions where a valid OAuth token for this application was obtained.  The POST will include a 'signed_request' in the same format as a Facebook signed_request, with at least <b>event</b> and <b>user_id</b> values defined</li> 
-                                <li style="margin-bottom: 0.25em; font-size: 15px">Use a <b>Service Token</b> to make authenticated, automated service calls.  This token can then be used in the <i>Authorization</i> request header in the form <b>Bearer &lt;token-value&gt;</b>, as per the OAuth2 protocol.  This token should be carefully guarded on a secure system and only transmitted via HTTPS.  Valid for 12 months.</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <h3>Central Services OAuth 2.0 Credentials</h3><br />
+
+                <p><strong>App ID:</strong><br />{{ client.client_id }}</p>
+
+                <p><strong>App Secret:</strong><br />{{ client.client_secret }}</p>
+
+                {% if service_token %}
+                <p><strong>Service Token:</strong><br />{{
+                    service_token.access_token }}</p>
+                {% endif %}
+
+                <form action="/client/{{ client.client_id }}" method="post">
+                    {{ form.hidden_tag() }}
+
+                    {{ render_field(form.application_origins, tabindex=10) }}
+
+                    {{ render_field(form.callback_url, tabindex=20) }}
+
+                    <button type="submit" name="submit" class="btn btn-tnth-primary">Update App Settings</button> &nbsp;
+                    <button id="confirmDel" type="button" class="btn btn-tnth-primary" data-placement="top" title="Delete This App">Delete Application</button> &nbsp;
+                    <button type="submit" name="service_token" value="service_token" class="btn btn-tnth-primary">Create/Update Service Token</button>
+                </form>
+
+                {% macro render_field(field) %}
+                <dt>{{ field.label }}
+                <dd>{{ field(**kwargs)|safe }}
+                    {% if field.errors %}
+                    <ul class=errors>
+                        {% for error in field.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </dd>
+                {% endmacro %}
+
+                <br />
+                <p><strong>Application URL</strong><br />
+                    The Application URL may contain one or more origins separated by a single space.  Required to include the origin of the client's OAuth authorization redirect_uri and CORS origin values for any in-browser API requests.
+                </p>
+                <p><strong>Callback URL</strong><br />
+                    Provide a Callback URL to receive POST requests for signifcant events, such as a user logout from sessions where a valid OAuth token for this application was obtained.  The POST will include a 'signed_request' in the same format as a Facebook signed_request, with at least <b>event</b> and <b>user_id</b> values defined.
+                </p>
+                <p><strong>Service Token</strong><br />
+                    Use a Service Token to make authenticated, automated service calls.  This token can then be used in the <i>Authorization</i> request header in the form <b>Bearer &lt;token-value&gt;</b>, as per the OAuth2 protocol.  This token should be carefully guarded on a secure system and only transmitted via HTTPS.  Valid for 12 months.
+                </p>
+
             </div>
         </div>
-
     </div>
+
+</div>
+<script>
+$(document).ready(function(){
+    $('#confirmDel').popover({
+        html : true,
+        content: "Are you sure you want to delete this app?<br /><br /><button type='submit' name='delete' value='delete' class='btn-tnth-primary btn'>Delete Now</button> &nbsp; <div class='btn btn-default' id='cancelDel'>Cancel</div>"
+    })
+    $("body").on('click','#cancelDel',function(){
+        $('#confirmDel').popover('hide')
+    })
+
+});
+</script>
 {% endblock %}
+
+
