--- a/portal/templates/client_add.html
+++ b/portal/templates/client_add.html
@@ -1,38 +1,28 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+{% from "flask_user/_macros.html" import render_field, client_back %}
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
-                <div class="well lead-well">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <h4>Obtain OAuth 2.0 Credentials from Central Services </h4>
-                            <ul>
-                                
-                                <li style="margin-bottom: 0.25em; font-size: 15px">
-To add an application to Central Services, one must first register
-the application origin or URL.  Multiple origins may be entered,
-separated by white space.
-                                </li>
-                            </ul>
-                            <form action="/client" method="post">
-                                <div class="form-group">
-                                    {{ form.hidden_tag() }}
+            <div class="well lead-well">
 
-                                    {{ form.application_origins.label }}
-                                    {% if form.application_origins.errors %}
-                                    <ul class="errors">{% for error in form.application_origins.errors %}<li>{{ error }}</li>{% endfor %}</ul>
-                                    {% endif %}
-                                    {{ form.application_origins(size=200, class="form-control") }}
-                                </div>
-                                <button type="submit" class="btn btn-tnth-primary">Register App</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+                {{ client_back() }}
+
+                <h3>Obtain OAuth 2.0 Credentials from Central Services</h3><br />
+
+                <p>To add an application to Central Services, one must first register the application origin or URL.  Multiple origins may be entered, separated by white space.</p>
+
+                <form action="/client" method="post">
+                    {{ form.hidden_tag() }}
+
+                    {{ render_field(form.application_origins, tabindex=10) }}
+
+                    <button type="submit" class="btn btn-tnth-primary">Register App</button>
+                </form>
+
             </div>
         </div>
-
     </div>
+</div>
 {% endblock %}
