--- a/portal/templates/clients_list.html
+++ b/portal/templates/clients_list.html
@@ -2,22 +2,26 @@
 {% block main %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 
                 <div class="well lead-well">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6">
-                            <h4>Central Services OAuth 2.0 Client Applications </h4>
-                            <ul>
-                                <li style="margin-bottom: 0.25em; font-size: 18px"><a href="{{ url_for('.client') }}">Create A New TrueNTH Client Application</a> </li>
-                                {% for client in clients %}
-                                <a href="{{ url_for('.client_edit', client_id=client.client_id) }}">
-                                    <li style="margin-bottom: 0.25em; font-size: 15px">App ID {{ client.client_id }} Site URL {{ client._redirect_uris }} </li>
-                                </a>
-                                {% endfor %}
-                            </ul>
-                        </div>
+
+                    <h3>Central Services OAuth 2.0 Client Applications</h3>
+
+                    <div style="margin: 2em 1em 3em">
+                        <a class="btn-tnth-primary btn" href="{{ url_for('.client') }}">Create A New TrueNTH Client Application</a>
                     </div>
+
+                    <h4>Your Current Applications</h4>
+                    {% if clients %}
+                    <ul>
+                        {% for client in clients %}
+                        <li><a href="{{ url_for('.client_edit', client_id=client.client_id) }}">App ID: {{ client.client_id }}<br />Site URL: {{ client._redirect_uris }}</a></li>
+                        {% endfor %}
+                    </ul>
+                    {% else %}
+                    <p>You have not created an client applications.</p>
+                    {% endif %}
                 </div>
             </div>
         </div>
