--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -2,7 +2,7 @@
 {% block main %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
             <div class="well lead-well">
 
                 <div class="pull-right">
